# cli

./: Cargo.toml  Containerfile.codex  Containerfile.codex-rust  README.md
.github/workflows/: cd.yml
cli/: Cargo.toml
cli/src/: config.rs  context.rs  main.rs  util.rs
cli/src/api/: agent.rs  auth.rs  chat.rs  git.rs  mod.rs  probes.rs
cli/src/cli/: editor.rs  mod.rs  run.rs
cli/src/providers/: mod.rs
cli/src/providers/chatgpt/: mod.rs
cli/src/providers/cohere/: mod.rs
cli/src/providers/gemini/: mod.rs
cli/src/providers/groq/: mod.rs
cli/src/providers/openrouter/: mod.rs
cli/src/runtime/: mod.rs
codex/: start-codex-acp.sh
libs/: README.md
libs/acp2rt/: Cargo.toml
libs/acp2rt/src/: acp_client.rs  agent.rs  config.rs  lib.rs  main.rs
libs/agent-api/: Cargo.toml
libs/agent-api/src/: client.rs  lib.rs  result.rs
libs/agent-api/src/types/: task.rs
libs/git-proxy/: Cargo.toml
libs/git-proxy/examples/basic-local/: Cargo.toml
libs/git-proxy/examples/basic-local/src/: main.rs
libs/git-proxy/examples/basic-remote/: Cargo.toml
libs/git-proxy/examples/basic-remote/src/: main.rs
libs/git-proxy/src/: compression.rs  lib.rs  routes.rs
libs/git-proxy/src/packet_line/: advertisement.rs  errors.rs  mod.rs  parse_commands.rs  parse_tests.rs
libs/llm-proxy/: Cargo.toml
libs/llm-proxy/src/: api.rs  config.rs  lib.rs  requests.rs
src/cli/: run.rs
src/runtime/: mod.rs
