[package]
name = "minion"
version = "0.1.0"
edition = "2021"

[dependencies]
# cli
clap = { version = "4", features = ["derive"] }
tempfile = "3"
shlex = "1"
which = "7"
# logging
log = "0.4"
env_logger = "0.11"
# async
tokio = { version = "1", features = ["rt-multi-thread", "io-std"] }
futures = "0.3"
async-trait = "0.1"
# HTTP
axum = "0.7"
tower-http = { version = "0.5", features = ["normalize-path", "trace"] }
reqwest = "0.12"
url = "2"
# data
serde = "1"
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
urlencoding = "2"
# config
toml = "0.8"
dirs = "6"
# git
git2 = "0.20"
# docker
bollard = "0.18"
tar = "0.4"
ignore = "0.4"
# os info
os_info = "3"
# auth
base64 = "0.22"
rand = "0.9"
sha2 = "0.10"
webbrowser = "1"
# error handling
anyhow = "1"
# misc
once_cell = "1"
# minionrt framework
agent-api = { path = "../libs/agent-api" }
git-proxy = { path = "../libs/git-proxy" }
llm-proxy = { path = "../libs/llm-proxy" }
