[package]
name = "minion"
version = "0.1.0"
edition = "2021"

[dependencies]
# cli
clap = { version = "4.5.58", features = ["derive"] }
tempfile = "3.25.0"
shlex = "1.3.0"
which = "8.0.0"
# logging
log = "0.4.29"
env_logger = "0.11.9"
# async
tokio = { version = "1.49.0", features = ["rt-multi-thread", "io-std"] }
futures = "0.3.31"
async-trait = "0.1.89"
# HTTP
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["normalize-path", "trace"] }
reqwest = "0.13.2"
url = "2.5.8"
# data
serde = "1.0.228"
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v7"] }
urlencoding = "2.1.3"
# config
toml = "1.0.1"
dirs = "6.0.0"
# git
git2 = "0.20.4"
# docker
bollard = "0.20.1"
tar = "0.4.44"
ignore = "0.4.25"
# os info
os_info = "3.13.0"
# auth
base64 = "0.22.1"
rand = "0.10.0"
sha2 = "0.10.9"
webbrowser = "1.0.6"
# error handling
anyhow = "1.0.101"
# misc
once_cell = "1.21.3"
# minionrt framework
agent-api = { path = "../libs/agent-api" }
git-proxy = { path = "../libs/git-proxy" }
llm-proxy = { path = "../libs/llm-proxy" }
