[package]
name = "agent-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# data
serde = { version = "1.0.228", features = ["derive"] }
uuid = "1.21.0"
chrono = { version = "0.4.43", features = ["serde"] }
# networking
url = { version = "2.5.8", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
# error handling
thiserror = "2.0.18"
