[package]
name = "git-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP
axum = "0.8.8"
headers = "0.4.1"
reqwest = { version = "0.13.2", features = ["json"] }
bytes = "1.11.1"
base64 = "0.22.1"
url = "2.5.8"
flate2 = "1.1.9"
# async
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "process"] }
# logging
log = "0.4.29"
# parsing
nom = "8.0.0"
gix-packetline = { version = "0.19.1", features = ["blocking-io"] }
