[package]
name = "llm-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP
actix-web = "4"
actix-web-httpauth = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2"
# logging
log = "0.4"
# data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
# async
futures-util = "0.3"
