[package]
name = "llm-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP
axum = "0.8.8"
async-trait = "0.1.89"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
url = "2.5.8"
# logging
log = "0.4.29"
# data
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4"] }
# async
futures-util = "0.3.31"
